Update portfolio layout

--- a/index.html
+++ b/index.html
@@ -69,20 +69,23 @@
             that meet real user needs.
         </p>
 
-        <div class="social-icons">
-            <a href="https://www.linkedin.com/in/janelle-montes-1b9885356/" target="_blank" rel="noopener noreferrer">
-                <i class="fa-brands fa-linkedin-in"></i>
-            </a>
-            <a href="https://github.com/janellemontes" target="_blank" rel="noopener noreferrer">
-                <i class="fa-brands fa-github"></i>
-            </a>
-            <a href="https://www.facebook.com/janelle.montes.562" target="_blank" rel="noopener noreferrer">
-                <i class="fa-brands fa-facebook-f"></i>
+        <div class="social-cv">
+            <div class="social-icons">
+                <a href="https://www.linkedin.com/in/janelle-montes-1b9885356/" target="_blank">
+                    <i class="fa-brands fa-linkedin-in"></i>
+                </a>
+                <a href="https://github.com/janellemontes" target="_blank">
+                    <i class="fa-brands fa-github"></i>
+                </a>
+                <a href="https://www.facebook.com/janelle.montes.562" target="_blank">
+                    <i class="fa-brands fa-facebook-f"></i>
+                </a>
+            </div>
+
+            <a href="Montes-Janelle-IT-Intern.pdf" class="dl-cv" download>
+                Download CV
             </a>
         </div>
-
-        <a href="Montes-Janelle-IT-Intern.pdf" class="dl-cv" download>Download CV</a>
-    </div>
 </section>
 
 <section class="skills" id="skills">
