--- a/index.html
+++ b/index.html
@@ -902,8 +902,8 @@
         <div class="event-card">
             <div class="event-slider">
                 <img src="design-exhibit.jpg" class="active" alt="Design Exhibit Image 1">
-                <img src="design2.jpg" alt="Design Exhibit Image 2">
-                <img src="design3.jpg" alt="Design Exhibit Image 3">
+                <img src="design2.JPG" alt="Design Exhibit Image 2">
+                <img src="design3.JPG" alt="Design Exhibit Image 3">
             </div>
             <h3 class="event-title">Design Exhibit – 1st Place Poster</h3>
         </div>
