--- a/index.html
+++ b/index.html
@@ -919,8 +919,8 @@
         <!-- Card 4: From Scroll to Skill Event -->
         <div class="event-card">
             <div class="event-slider">
-                <img src="scroll1.jpg" class="active" alt="From Scroll to Skill Image 1">
-                <img src="scroll2.jpg" alt="From Scroll to Skill Image 2">
+                <img src="scroll1.JPG" class="active" alt="From Scroll to Skill Image 1">
+                <img src="scroll2.JPG" alt="From Scroll to Skill Image 2">
             </div>
             <h3 class="event-title">From Scroll to Skill Event</h3>
         </div>
