--- a/index.html
+++ b/index.html
@@ -59,17 +59,16 @@
         <h1>Hi, It’s <span>Janelle</span></h1>
 
         <h3 class="typing-text">
-            I'm an aspiring <span></span>
+            I’m an aspiring <span></span>
         </h3>
 
         <p>
-            Graduating IT student from Camarines Norte State College with foundational skills in 
-            system analysis, UX/UI design, system development, and technical support, driven by a
-            strong interest in designing user-centered, accessible, and practical digital solutions
-            that meet real user needs.
+            Graduating IT student from Camarines Norte State College with foundational skills in
+            system analysis, UX/UI design, system development, and technical support. Passionate
+            about building user-centered, accessible, and practical digital solutions.
         </p>
 
-        <div class="social-cv">
+        <div class="home-actions">
             <div class="social-icons">
                 <a href="https://www.linkedin.com/in/janelle-montes-1b9885356/" target="_blank">
                     <i class="fa-brands fa-linkedin-in"></i>
@@ -86,6 +85,7 @@
                 Download CV
             </a>
         </div>
+    </div>
 </section>
 
 <section class="skills" id="skills">
