--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 </a>
             </div>
 
-            <a href="Montes-Janelle-IT-Intern.pdf" class="dl-cv" download>
+            <a href="Montes-Janelle-J-Resume.pdf" class="dl-cv" download>
                 Download CV
             </a>
         </div>
